chore: add documentation details