@@ -3,14 +3,14 @@ package com.costa.luiz.standalone;
 import java.time.Duration;
 
 @SuppressWarnings("java:S106")
-public class ExpensiveThreads {
+public class VirtualThreads {
 
     public static void main(String[] args) throws InterruptedException {
-        int numberOfThreads = 10_000;
+        int numberOfThreads = 100_000;
         for (int idx = 0; idx < numberOfThreads; idx++) {
-            new Thread(ExpensiveThreads::doSomeIOWork).start();
+            Thread.startVirtualThread(VirtualThreads::doSomeIOWork);
         }
-        Thread.sleep(Duration.ofSeconds(5));
+        Thread.sleep(Duration.ofSeconds(10));
         System.out.println("Done");
     }
 
